fixes #997 - change data fetch for OFC2 widgets to load widget+data in a single fetch; moved HTML to graph.tpl; move JavaScript to common.js; fixed browser portability bug in findSWFGraph
fixes #1020 - only the last chart added to the dashboard can be saved locally (using the right-click pop-up menu to "Save Image Locally"); the footer icon link worked properly

fixes #947 - truncated translation string in Flash widget when "no data"; this is now styled consistently with "no data" for tables and tag clouds

related changes:
 * data-file (Flash parameter) renamed to x-data-file; this is used by Widgetize to provide the code to embed Flash OBJECTs
 * add translation strings for Flash detection
 * move some translation strings to JavaScript and enhance getJavascriptTranslations() to always generate 'General' translation strings

--- a/plugins/CoreHome/templates/styles.css
+++ b/plugins/CoreHome/templates/styles.css
@@ -97,3 +97,11 @@ div .sparkline {
 	padding-right: 10px;
 	margin-top: 0;
 }
+
+div.pk-emptyGraph {
+        padding-top: 20px;
+        padding-bottom: 10px;
+        text-align: center;
+        font-size: 0.9em;
+        font-style: italic;
+}
